--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             <strong id="title">Adam's Page of Stuff</strong>
         </h1>
         <img id="topLeft" src="graphics/pillarsofcreation.jpg">
-        <img id="topRight" src="graphics/earthAndMoon.bmp">
+        <img id="topRight" src="graphics/earthAndMoon.jpg">
         <br>
-        <img id="bottomLeft" src="graphics/newEarth.bmp">
-        <img id="bottomRight" src="graphics/planetAndStar.bmp">
+        <img id="bottomLeft" src="graphics/newEarthV2.jpg">
+        <img id="bottomRight" src="graphics/planetAndStar.jpg">
         <br>
         <p>
             This is my page of things that I decided to make. My first HTML page and just an experiment really.
