--- a/index.html
+++ b/index.html
@@ -19,5 +19,22 @@
         <p>
             This is my page of things that I decided to make. My first HTML page and just an experiment really.
         </p>
+        <br>   
+        <p>
+            Range:
+        </p>
+        <input type="range">
+        <p>
+            Checkbox:
+        </p>
+        <input type="checkbox">
+        <p>
+            Date:
+        </p>
+        <input type="date">
+        <p>
+            Colour:
+        </p>
+        <input type="color">
     </body>
 </html>
