new inputs. lists and buttons

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <p>
             This is my page of things that I decided to make. My first HTML page and just an experiment really.
         </p>
+        <br>
+        <ol> The best flavours of protein shake:
+            <li>Banana</li>
+            <li>Vanilla</li>
+            <li>Chocolate</li>
+        </ol>
         <br>   
         <p>
             Range:
@@ -36,5 +42,15 @@
             Colour:
         </p>
         <input type="color">
+        <p>
+            Make a new account:
+        </p>
+        <input placeholder="Email", type="text">
+        <br>
+        <input placeholder="Password", type="password">
+        <br>
+        <button href="www.infiniconcept.com">  
+            My dad's website
+        </button>
     </body>
 </html>
