testing a 2nd page

--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
         <button href="www.infiniconcept.com">  
             My dad's website
         </button>
+        <button href="/page2.hmtl">Next Page</button>
     </body>
 </html>
