--- a/index.html
+++ b/index.html
@@ -49,9 +49,15 @@
         <br>
         <input placeholder="Password", type="password">
         <br>
-        <button href="www.infiniconcept.com">  
-            My dad's website
+        <button>  
+            <a href="www.infiniconcept.com">
+                My dad's website
+            </a>
         </button>
-        <button href="/page2.hmtl">Next Page</button>
+        <button>
+            <a href="/page2.hmtl">
+                Next Page
+            </a>
+        </button>
     </body>
 </html>
