--- a/page2.html
+++ b/page2.html
@@ -7,8 +7,10 @@
         <p>
             This is a second page that I made as a test
         </p>
-        <button href="/index.html">
-            Main Page
+        <button>
+            <a href="/index.html">
+                Main Page
+            </a>
         </button>
     </body>
 </html>
