--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <title>
             Adam's Page
         </title>
+        <style>
+            body {
+                background-image: url("graphics/stary-sky.jpg");
+                color: #ceb6b6;
+            }
+        </style>
     </head>
     <body> 
         <h1>
