--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
             This is a second page that I made as a test
         </p>
         <button>
-            <a href="/index.html">
+            <a href="index.html">
                 Main Page
             </a>
         </button>
