--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>  
 <head> 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="navbar.css">
     <title>
         Adam's Page
     </title>
@@ -31,39 +32,21 @@
                     <li>
                         <a href="#">Contact</a>
                     </li>
+                    <li>
+                        <a href="#">Sign In</a>
+                    </li>
                 </ul>
             </nav>
         </div>
     </header>
-    <div>
-        <table>
-            <tr>
-                <td>
-                    <div class="mainText">
-                        <img id="topLeft" src="graphics/pillarsofcreation.jpg">
-                        <img id="topRight" src="graphics/earthAndMoon.jpg">
-                        <br>
-                        <img id="bottomLeft" src="graphics/newEarthV2.jpg">
-                        <img id="bottomRight" src="graphics/planetAndStar.jpg">
-                        <br>
-                    </div>
-                </td>
-                <td>
-                    <div class="signUp">
-                        <input class="signUpInfo", placeholder="Email", type="text">
-                        <input class="signUpInfo", placeholder="Password", type="password">
-                        <br>
-                        <button class="signUpButton">
-                            Sign Up
-                        </button>
-                    </div>
-                </td>
-            </tr>
-        </table>
+    <div class="signUp">
+        <input class="signUpInfo", placeholder="Email", type="text">
+        <input class="signUpInfo", placeholder="Password", type="password">
+        <br>
+        <button class="signUpButton">
+            Sign Up
+        </button>
     </div>
-    <p>
-        This is my page of things that I decided to make. My first HTML page and just an experiment really.
-    </p>
     <br>
     <br>
     <br>
@@ -76,6 +59,6 @@
     <br>
     <br>
     <br>
-    
+
 </body>
 </html>
