--- a/index.html
+++ b/index.html
@@ -47,18 +47,8 @@
             Sign Up
         </button>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
+    <div>
+        <p>This is my page. There's not much here, but there will be soon :)</p>
+    </div>
 </body>
 </html>
