--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </button>
     </div>
     <div>
-        <p>This is my page. There's not much here, but there will be soon :)</p>
+        <p>WE ARE HAVING A REDO :DDD</p>
     </div>
 </body>
 </html>
