--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="#">About</a>
+                        <a href="/about.html">About</a>
                     </li>
                     <li>
                         <a href="https://www.infiniconcept.com">Infiniconcept</a>
