--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navbar.css">
     <title>
-        Adam's Page
+        Home
     </title>
     <style>
         body {
@@ -21,7 +21,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="about.html">About</a>
@@ -33,22 +33,11 @@
                         <a href="#">Contact</a>
                     </li>
                     <li>
-                        <a href="#">Sign In</a>
+                        <a href="projects.html">Projects</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
-    <div class="signUp">
-        <input class="signUpInfo", placeholder="Email", type="text">
-        <input class="signUpInfo", placeholder="Password", type="password">
-        <br>
-        <button class="signUpButton">
-            Sign Up
-        </button>
-    </div>
-    <div>
-        <p>This is my page. There's not much here, but there will be soon :)</p>
-    </div>
 </body>
 </html>
